Fixed font issues and alignment issues

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
 }
 
 p{
-  font-family: GTBlite;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 @font-face {
@@ -211,16 +211,24 @@ a.button {
     width: 80%;
   }
 
-  #sevengoals{
-    justify-content: flex-start;
+  #sevengoals img{
+    height: auto;
+    width: 80vw;
+
   }
 
   #about{
     flex-direction: column;
+    align-items: center;
+  }
+
+  #about img{
+    height: 20vh;
+    width: auto;
   }
 
   .about-text{
-    width: 90%;
+    width: 100%;
     justify-content: center;
   }
 
@@ -237,6 +245,11 @@ margin-left: 10px;
 
   .foundation h1{
     font-size: 2rem;
+    text-align: center;
+  }
+
+  .foundation h2{
+    text-align: center;
   }
 
   .cta{
